--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Opal Client</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+
+<body>
+<div>
+  <h1>Title</h1>
+  <a href="index.html" target="_self">
+  <button>Button 1</button> </a>
+  <a href="index.html" target="_self">
+  <button>Button 2</button> </a>
+
+</div>
+ </p>  
+</body>
+</html>
 
