--- a/home.html
+++ b/home.html
@@ -10,14 +10,17 @@
 
 <body>
 <div>
-  <h1>Title</h1>
-  <a href="index.html" target="_self">
-  <button>Button 1</button> </a>
-  <a href="index.html" target="_self">
-  <button>Button 2</button> </a>
-
+  <h1>Opal's projects</h1>
+  <p> My website for lots of my programming projects </p>
+  <a href="opalclient.html" target="_self">
+  <button>Opal Client</button> </a>
+  <a href="https://twitter.com/Oh_Pool" target="_self">
+  <button>My twitter</button> </a>
+  <a href="https://github.com/OhPool/ultrasimple.css">Made using ultrasimple.css</a>
+  
+  
 </div>
- </p>  
+ 
 </body>
 </html>
 
