--- a/home.html
+++ b/home.html
@@ -16,8 +16,9 @@
   <button>Opal Client</button> </a>
   <a href="https://twitter.com/Oh_Pool" target="_self">
   <button>My twitter</button> </a>
-  <a href="https://github.com/OhPool/ultrasimple.css">Made using ultrasimple.css</a>
-  
+  <p>
+  <a href="https://github.com/OhPool/ultrasimple.css" target="_blank">Made using ultrasimple.css</a>
+  </p>
   
 </div>
  
