--- a/home.html
+++ b/home.html
@@ -14,10 +14,10 @@
   <p> My website for lots of my programming projects </p>
   <a href="opalclient.html" target="_self">
   <button>Opal Client</button> </a>
-  <a href="https://twitter.com/Oh_Pool" target="_self">
-  <button>My twitter</button> </a>
+  <a href="https://github.com/OhPool/ultrasimple.css" target="_blank">
+  <button>Ultrasimple.css</button> </a>
   <p>
-  <a href="https://github.com/OhPool/ultrasimple.css" target="_blank">Made using ultrasimple.css</a>
+  <a href="https://twitter.com/Oh_Pool" target="_blank">Twitter</a>
   </p>
   
 </div>
