--- a/home.html
+++ b/home.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width">
   <title>Opal Client</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" href="Opal_Icon.png" type="image/x-icon">
 </head>
 
 
 <body>
 <div>
   <h1>Opal's projects</h1>
-  <p> My website for lots of my programming projects </p>
+  <p> My website for projects </p>
   <a href="opalclient.html" target="_self">
   <button>Opal Client</button> </a>
   <a href="https://github.com/OhPool/ultrasimple.css" target="_blank">
