--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
 <div>
   <h1>Opal's projects</h1>
-  <p> My website for projects </p>
+  <p> My website for a few of my better programming projects! </p>
   <a href="opalclient.html" target="_self">
   <button>Opal Client</button> </a>
   <a href="https://github.com/OhPool/ultrasimple.css" target="_blank">
