--- a/opalclient.html
+++ b/opalclient.html
@@ -13,7 +13,7 @@
 <div>
   <h1>Opal's projects</h1>
   <p> A client for the game ev.io, which includes audio, video and input optimizations!</p>
-  <a href="https://drive.proton.me/urls/KF2E514KVC#2hewjegbor9F" target="_blank">
+  <a href="https://app.box.com/s/3mil9p6bwoovc64fyhj3xnbviqonguom" target="_blank">
   <button>Download</button> </a>
   
 </div>
