--- a/opalclient.html
+++ b/opalclient.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Opal Client</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.css">
   <link rel="icon" href="Opal_Icon.png" type="image/x-icon">
 </head>
 
@@ -13,7 +13,7 @@
 <div>
   <h1>Opal's projects</h1>
   <p> A client for the game ev.io, which includes audio, video and input optimizations!</p>
-  <a href="https://app.box.com/s/epxp9mfip8502rvt2bs4hjhumilrr2in" target="_blank">
+  <a href="https://github.com/OhPool/Opal_Client_4" target="_blank">
   <button>Download</button> </a>
 </div>
 </html> 
