--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Opal Client</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="Opal_Icon.png" type="image/x-icon">
 </head>
 
