--- a/opalclient.html
+++ b/opalclient.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Opal Client</title>
-  <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
+  <link rel="stylesheet" href="https://github.com/OhPool/ultrasimple.css/blob/main/style.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="Opal_Icon.png" type="image/x-icon">
 </head>
