--- a/home.html
+++ b/home.html
@@ -10,13 +10,15 @@
 </head>
 
 
-<body>
-  <h1>Opal's projects</h1>
-  <p> My website for a few of my better programming projects! </p>
-  <a href="opalclient.html" target="_self">
-  <button>Opal Client</button> </a>
-  <a href="https://github.com/OhPool/ultrasimple.css" target="_blank">
-  <button>Ultrasimple.css</button> </a>
-</body>
+ <div>
+  <body>
+    <h1>Opal's projects</h1>
+    <p> My website for a few of my better programming projects! </p>
+    <a href="opalclient.html" target="_self">
+    <button>Opal Client</button> </a>
+    <a href="https://github.com/OhPool/ultrasimple.css" target="_blank">
+    <button>Ultrasimple.css</button> </a>
+  </body>
+ </div>
 </html>
 
