--- a/opalclient.html
+++ b/opalclient.html
@@ -4,15 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Opal Client</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="Opal_Icon.png" type="image/x-icon">
 </head>
 
 
-<body>
+ <body>
   <h1>Opal's projects</h1>
   <p> A client for the game ev.io, which includes audio, video and input optimizations!</p>
   <a href="https://github.com/OhPool/Opal_Client_4" target="_blank">
   <button>Download</button> </a>
+  </body>
 </html> 
