--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Opal Client</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="Opal_Icon.png" type="image/x-icon">
 </head>
